--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -38,18 +38,20 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE AUTO
-set_global_assignment -name TOP_LEVEL_ENTITY bregmips
+set_global_assignment -name TOP_LEVEL_ENTITY Pipeline
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:12:37  DECEMBER 06, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE ula_mips.vhd
 set_global_assignment -name VHDL_FILE somador.vhd
 set_global_assignment -name VHDL_FILE pc.vhd
 set_global_assignment -name VHDL_FILE bregmips.vhd
 set_global_assignment -name VHDL_FILE Pipeline.vhd
 set_global_assignment -name VHDL_FILE mux.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name QIP_FILE minst.qip
+set_global_assignment -name QIP_FILE mdata.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
