--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -54,5 +54,6 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name QIP_FILE minst.qip
 set_global_assignment -name QIP_FILE mdata.qip
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VHDL_FILE controle_ula.vhd
+set_global_assignment -name VHDL_FILE controle.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
