--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -60,5 +60,6 @@ set_global_assignment -name VHDL_FILE sign_extend.vhd
 set_global_assignment -name VHDL_FILE if_id.vhd
 set_global_assignment -name VHDL_FILE id_ex.vhd
 set_global_assignment -name VHDL_FILE ex_mem.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VHDL_FILE mem_wb.vhd
+set_global_assignment -name VHDL_FILE conversor_7seg.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
