--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -64,4 +64,6 @@ set_global_assignment -name VHDL_FILE mem_wb.vhd
 set_global_assignment -name VHDL_FILE conversor_7seg.vhd
 set_global_assignment -name VHDL_FILE mux4.vhd
 set_global_assignment -name VHDL_FILE comparador.vhd
+set_global_assignment -name VHDL_FILE mux2.vhd
+set_global_assignment -name VHDL_FILE mux41.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
