--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -43,15 +43,17 @@ set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:12:37  DECEMBER 06, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name VHDL_FILE mux_41.vhd
 set_global_assignment -name VHDL_FILE ula_mips.vhd
 set_global_assignment -name VHDL_FILE somador.vhd
 set_global_assignment -name VHDL_FILE pc.vhd
 set_global_assignment -name VHDL_FILE bregmips.vhd
 set_global_assignment -name VHDL_FILE Pipeline.vhd
-set_global_assignment -name VHDL_FILE mux.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name QIP_FILE minst.qip
 set_global_assignment -name QIP_FILE mdata.qip
 set_global_assignment -name VHDL_FILE controle_ula.vhd
@@ -65,7 +67,6 @@ set_global_assignment -name VHDL_FILE conversor_7seg.vhd
 set_global_assignment -name VHDL_FILE mux4.vhd
 set_global_assignment -name VHDL_FILE comparador.vhd
 set_global_assignment -name VHDL_FILE mux2.vhd
-set_global_assignment -name VHDL_FILE mux41.vhd
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
